Make GetStorageUsage include orgins with only uncommitted data.

In general GetStorageUsage only returns usage as it is on disk, which
means it only returns committed data. But the same API is also used to
figure out which origins have localstorage data in general, so make sure
to always include all origins that haven't been committed to disk yet as
well. In the old code this worked automatically since opening
localstorage would cause an empty sqlite database to be created for that
origin.

Bug: 735040
Change-Id: Idc5410f30404c8ba6d5110416cb019d5d4c415ea
Reviewed-on: https://chromium-review.googlesource.com/541498
Commit-Queue: Marijn Kruisselbrink <mek@chromium.org>
Reviewed-by: Daniel Murphy <dmurph@chromium.org>
Reviewed-by: Theresa <twellington@chromium.org>
Reviewed-by: Martin Šrámek <msramek@chromium.org>
Cr-Commit-Position: refs/heads/master@{#481638}
Former-commit-id: 8309dd9de3baa6a3897d3b1fe094e26846f9bad8